2006-06-05  Srinivasa Ragavan  <sragavan@novell.com>

	** Fixed bug #268884
	
	* gui/e-calendar-table.c: (on_new_task): Added a new popup entry.
	* gui/e-tasks.c: (setup_widgets): Added a reference to table

2006-06-01  Harish Krishnaswamy  <kharish@novell.com>

	* gui/dialogs/Makefile.am, gui/dialogs/event-editor.c,
	gui/dialogs/task-editor.c: Remove redundant files 
	meeting-page.[ch], cal-attachment.glade and references
	in includes.

2006-05-25  Srinivasa Ragavan  <sragavan@novell.com>

	** Added support to save calendar/events/attachments to remote
	shares in Calenda/Memo/Tasks components.

	* gui/dialogs/cal-attachment-select-file.c: (run_selector),
	(comp_editor_select_file_attachments):
	* gui/dialogs/comp-editor.c: (drop_action), (cab_add),
	(menu_insert_attachment_cb):
	* gui/e-cal-popup.c: (temp_save_part):
	* gui/e-calendar-table.c: (e_calendar_table_on_save_as):
	* gui/e-calendar-view.c: (on_save_as),
	(e_calendar_view_get_tooltips):
	* gui/e-memo-table.c: (e_memo_table_on_save_as):

2006-05-23  Srinivasa Ragavan  <sragavan@novell.com>

	More alarm fixes

	* gui/alarm-notify/alarm-notify-dialog.c: (dialog_response_cb),
	(notified_alarms_dialog_new), (tree_selection_changed_cb):
	* gui/alarm-notify/alarm-queue.c: (query_objects_changed_async),
	(free_tray_icon_data):

2006-05-22  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	**Fixes bug #331418
	* gui/memos-component.c: Set mnemonics in popup menu.

2006-05-13  Harish Krishnaswamy  <kharish@novell.com>

	Patch suggested by Yu-Hui Liu
	* conduits/todo/todo-conduit.c: (pre_sync):
	Check for timezone before passing the context.

2006-04-20  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes the events appearing in different timezone appear in
	right time slot. Partially fixes #332911
	* gui/e-cal-model.c: (e_cal_model_set_instance_times):
	* gui/e-calendar-view.c: (get_label),
	(e_calendar_view_get_tooltips): Get the timezone from the backend
	using the tzid if its not present in the icalcomponent.
