@@ -103,7 +103,7 @@
 		  <property name="column_spacing">6</property>
 
 		  <child>
-		    <widget class="GtkLabel" id="label10">
+		    <widget class="GtkLabel" id="timezone_label">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">Time _zone:</property>
 		      <property name="use_underline">True</property>
@@ -165,6 +165,9 @@
 		      <property name="int1">0</property>
 		      <property name="int2">0</property>
 		      <property name="last_modification_time">Thu, 13 Jan 2005 04:18:03 GMT</property>
+		      <accessibility>
+			<atkrelation target="timezone_label" type="labelled-by"/>
+		      </accessibility>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">1</property>
